# artistsphere

./: README.md  session.json  session.txt
artist/: ArtistWindow.cpp  ArtistWindow.h  CMakeLists.txt  Trie.cpp  Trie.h  main.cpp
artist_viewer/: ArtistViewerWindow.cpp  ArtistViewerWindow.h  CMakeLists.txt
customer/: CMakeLists.txt  CustomerWindow.cpp  CustomerWindow.h  Trie.cpp  Trie.h  main.cpp
login_register/: CMakeLists.txt
login_register/src/: DatabaseManager.cpp  DatabaseManager.h  LoginSignupWindow.cpp  LoginSignupWindow.h  LoginWindow.cpp  LoginWindow.h  SignUpWindow.cpp  SignUpWindow.h  main.cpp
profile/: CMakeLists.txt  ProfileWindow.cpp  ProfileWindow.h  main.cpp
reel/: CMakeLists.txt  ReelFeedWindow.cpp  ReelFeedWindow.h  ReelWidget.cpp  ReelWidget.h  main.cpp
